# hvs

./: README.md  run_image.sh
hnsw/: CMakeLists.txt  main.cpp  sift_1b.cpp
hnsw/hnswlib/: hnswalg.h  hnswlib.h  space_ip.h  space_l2.h
nsg-master/include/efanna2e/: distance.h  index.h  index_nsg.h  neighbor.h  parameters.h
nsg-master/src/: index.cpp  index_nsg.cpp
nsg-master/tests/: test_nsg_index.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp
